a lot of stuff, navbar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,7 +32,7 @@
 .footer a {
   justify-content: center;
   align-items: center;
-  color: #0070f3;
+  color: var(--accent);
 }
 
 .footer .id {
@@ -40,7 +40,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: var(--accent);
   text-decoration: none;
 }
 
