--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+:root {
+  --accent: #0070f3;
+}
+
 html,
 body {
   padding: 0;
@@ -9,6 +13,29 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+nav {
+  display: flex;
+}
+
+nav a:hover {
+  color: var(--accent);
+}
+
+nav ul {
+  display: flex;
+}
+
+nav ul li {
+  list-style-type: none;
+  padding: 10px;
+  order: 1;
+}
+
+a h1 {
+  font-size: 50px;
+  color: var(--accent);
 }
 
 * {
