--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -68,9 +68,9 @@
 
 .code {
   background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
+  border-radius: 10px;
+  padding: 20px;
+  font-size: 1.25rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
@@ -124,6 +124,10 @@
 
 .logo {
   height: 1em;
+}
+
+.imageRound {
+  border-radius: 50%;
 }
 
 @media (max-width: 600px) {
