--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,9 @@ a {
 }
 
 nav {
+  width: 100%;
   display: flex;
+  border-bottom: 1px solid #eaeaea;
 }
 
 nav a:hover {
@@ -31,7 +33,7 @@ nav ul li {
   list-style-type: none;
   padding: 10px;
   order: 1;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 a h1 {
